@startuml classdiag

class Client {


}

class Suricate {
  start_video_stream()
  stop_video_stream()

  start_cam_ctrl()
  stop_cam_ctrl()
  move_cam()
}

class SuricateVideoStreamNS {

}

class SuricateCmdNS {

}

abstract class BaseCamera {
  start_streaming()
  stop_streaming()
}



class CameraPi2 {


}

class CamServo {
  start_cam_ctrl()
  stop_cam_ctrl()
  move_cam()
}

BaseCamera <|-- CameraPi2
Client --> Suricate
Client --> SuricateVideoStreamNS
Client --> SuricateCmdNS
Suricate --> BaseCamera
Suricate --> CamServo

SuricateCmdNS --> Client


@enduml